Change image paths to relative URLs
Updated image paths to relative URLs for better portability.

--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
         <!-- Our Story Section - Two Column Layout -->
         <section class="our-story-section">
           <div class="story-image">
-            <img src="C:\Users\sajin\Downloads\lab5\lab5\handicraft_store\images\story.webp" alt="Our Story - Handicraft artisans working on handmade products">
+            <img src="images\story.webp" alt="Our Story - Handicraft artisans working on handmade products">
           </div>
           <div class="story-content">
             <h2>Our Story</h2>
@@ -71,13 +71,13 @@
             <p>Sajina leads the overall vision of the Handicraft Online Store. She carefully selects each handmade item and works with artisans to ensure authenticity, creativity, and quality in every piece.</p>
           </article>
           <article class="team-member">
-            <img src="C:\Users\sajin\Downloads\lab5\lab5\handicraft_store\images\Eman's photo.jpg" alt="Muhammad Eman Ajaz, Web & Digital Manager" class="team-photo">
+            <img src="images\Eman's photo.jpg" alt="Muhammad Eman Ajaz, Web & Digital Manager" class="team-photo">
             <h3>Muhammad Eman Ajaz</h3>
             <p class="team-role">Web & Digital Manager</p>
             <p>Eman maintains the website, updates product pages, and keeps the design consistent. He ensures a smooth user experience on all devices and supports basic technical improvements.</p>
           </article>
           <article class="team-member">
-            <img src="C:\Users\sajin\Downloads\lab5\lab5\handicraft_store\images\Waqsa's photo.jpg" alt="Muhammad Waqas Iqbal, Marketing & Social Media Coordinator" class="team-photo">
+            <img src="images\Waqsa's photo.jpg" alt="Muhammad Waqas Iqbal, Marketing & Social Media Coordinator" class="team-photo">
             <h3>Muhammad Waqas Iqbal</h3>
             <p class="team-role">Marketing & Social Media Coordinator</p>
             <p>Waqas manages the store’s social media presence, creates engaging content, and promotes new products. He helps build brand awareness and connect customers with unique handmade items.</p>
@@ -123,3 +123,4 @@
   <script src="js/main.js"></script>
 </body>
 </html>
+
