--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
         <h2>Meet Our Team</h2>
         <div class="team-grid">
           <article class="team-member">
-            <img src="C:\Users\sajin\Downloads\lab5\lab5\handicraft_store\images\Sajina.jpg" alt="Sajina Rana Magar, Founder & Creative Director" class="team-photo">
+            <img src="images\Sajina.jpg" alt="Sajina Rana Magar, Founder & Creative Director" class="team-photo">
             <h3>Sajina Rana Magar</h3>
             <p class="team-role">Founder & Creative Director</p>
             <p>Sajina leads the overall vision of the Handicraft Online Store. She carefully selects each handmade item and works with artisans to ensure authenticity, creativity, and quality in every piece.</p>
@@ -114,8 +114,8 @@
       <div class="footer-bottom">
         <p>&copy; 2025 Handicraft Online Store. All rights reserved. <a href="#privacy">Privacy Policy</a></p>
         <p>This is a static website for ICT726 assessment 3. No real transactions are processed.</p>
-        <p>Student Name: Sajina Rana Magar                  </p>
-        <p>Student Id: 20033821                             </p>
+        <p>Student Name: Sajina Rana Magar </p>
+        <p>Student Id: 20033821   </p>
       </div>
     </div>
   </footer>
@@ -123,4 +123,5 @@
   <script src="js/main.js"></script>
 </body>
 </html>
+
 
