Change image paths to relative URLs
Updated image paths to relative URLs for better portability.

--- a/gallery.html
+++ b/gallery.html
@@ -38,73 +38,73 @@
 
       <div class="gallery-grid" role="region" aria-label="Interactive gallery with lightbox">
         <figure class="gallery-item">
-          <img src="C:\Users\sajin\Downloads\lab5\lab5\handicraft_store\images\Table Runners.avif" alt="Woven table runner with traditional patterns" class="gallery-thumb" data-full="C:\Users\sajin\Downloads\lab5\lab5\handicraft_store\images\Table Runners.avif">
+          <img src="images\Table Runners.avif" alt="Woven table runner with traditional patterns" class="gallery-thumb" data-full="images\Table Runners.avif">
           <figcaption>Woven Table Runner</figcaption>
         </figure>
         <figure class="gallery-item">
-          <img src="C:\Users\sajin\Downloads\lab5\lab5\handicraft_store\images\Glazed Ceramic Vase.avif" alt="Handmade ceramic Vase" class="gallery-thumb" data-full="C:\Users\sajin\Downloads\lab5\lab5\handicraft_store\images\Glazed Ceramic Vase.avif">
+          <img src="images\Glazed Ceramic Vase.avif" alt="Handmade ceramic Vase" class="gallery-thumb" data-full="images\Glazed Ceramic Vase.avif">
           <figcaption>Hand-Painted Ceramic Vase</figcaption>
         </figure>
         <figure class="gallery-item">
-          <img src="C:\Users\sajin\Downloads\lab5\lab5\handicraft_store\images\Carved Spoon Set.jpg" alt="Wooden craft detail and finishing" class="gallery-thumb" data-full="C:\Users\sajin\Downloads\lab5\lab5\handicraft_store\images\Carved Spoon Set.jpg">
+          <img src="images\Carved Spoon Set.jpg" alt="Wooden craft detail and finishing" class="gallery-thumb" data-full="images\Carved Spoon Set.jpg">
           <figcaption>Hand-Carved Wooden Spoon Pieces</figcaption>
         </figure>
         <figure class="gallery-item">
-          <img src="C:\Users\sajin\Downloads\lab5\lab5\handicraft_store\images\Jute bag handmade.webp" alt="Jute Handmade Bag" class="gallery-thumb" data-full="C:\Users\sajin\Downloads\lab5\lab5\handicraft_store\images\Jute bag handmade.webp">
+          <img src="images\Jute bag handmade.webp" alt="Jute Handmade Bag" class="gallery-thumb" data-full="images\Jute bag handmade.webp">
           <figcaption>Jute Bag Handmade</figcaption>
         </figure>
         <figure class="gallery-item">
-          <img src="C:\Users\sajin\Downloads\lab5\lab5\handicraft_store\images\Crochet Handmade Doll.png" alt="Crochet Handmade Doll" class="gallery-thumb" data-full="C:\Users\sajin\Downloads\lab5\lab5\handicraft_store\images\Crochet Handmade Doll.png">
+          <img src="images\Crochet Handmade Doll.png" alt="Crochet Handmade Doll" class="gallery-thumb" data-full="images\Crochet Handmade Doll.png">
           <figcaption>Crochet Handmade Doll</figcaption>
         </figure>
         <figure class="gallery-item">
-          <img src="C:\Users\sajin\Downloads\lab5\lab5\handicraft_store\images\Traditional handmade necklace set.webp" alt="Antique Gold & Pearl Jewelry Set" class="gallery-thumb" data-full="C:\Users\sajin\Downloads\lab5\lab5\handicraft_store\images\Traditional handmade necklace set.webp">
+          <img src="images\Traditional handmade necklace set.webp" alt="Antique Gold & Pearl Jewelry Set" class="gallery-thumb" data-full="images\Traditional handmade necklace set.webp">
           <figcaption>Antique Gold & Pearl Jewelry Set</figcaption>
         </figure>
 
        <figure class="gallery-item">
-          <img src="C:\Users\sajin\Downloads\lab5\lab5\handicraft_store\images\Crochet Blossom Bouquet.webp" alt="Handmade crochet lily bouquet with white and pink petals and green buds" class="gallery-thumb" data-full="C:\Users\sajin\Downloads\lab5\lab5\handicraft_store\images\Crochet Blossom Bouquet.webp">
+          <img src="images\Crochet Blossom Bouquet.webp" alt="Handmade crochet lily bouquet with white and pink petals and green buds" class="gallery-thumb" data-full="images\Crochet Blossom Bouquet.webp">
        <figcaption>Crochet Lily Bouquet</figcaption>
        </figure>
 
        <figure class="gallery-item">
-        <img src="C:\Users\sajin\Downloads\lab5\lab5\handicraft_store\images\wall clock.avif" alt="Colorful abstract swirl wall clock with bold rainbow paint texture" class="gallery-thumb" data-full="C:\Users\sajin\Downloads\lab5\lab5\handicraft_store\images\wall clock.avif">
+        <img src="images\wall clock.avif" alt="Colorful abstract swirl wall clock with bold rainbow paint texture" class="gallery-thumb" data-full="images\wall clock.avif">
        <figcaption>Rainbow Wall Clock</figcaption>
        </figure>
 
        <figure class="gallery-item">
-        <img src="C:\Users\sajin\Downloads\lab5\lab5\handicraft_store\images\earings.webp" alt="Handcrafted earrings with paper texture and calligraphy-style script, decorated with beads" class="gallery-thumb" data-full="C:\Users\sajin\Downloads\lab5\lab5\handicraft_store\images\earings.webp">
+        <img src="images\earings.webp" alt="Handcrafted earrings with paper texture and calligraphy-style script, decorated with beads" class="gallery-thumb" data-full="images\earings.webp">
        <figcaption>Calligraphy-Inspired Handmade Earrings</figcaption>
        </figure>
 
        <figure class="gallery-item">
-        <img src="C:\Users\sajin\Downloads\lab5\lab5\handicraft_store\images\Artisan wooden birds.webp" alt="Handcrafted resin and wood bird sculpture resting on a natural branch" class="gallery-thumb" data-full="C:\Users\sajin\Downloads\lab5\lab5\handicraft_store\images\Artisan wooden birds.webp">
+        <img src="images\Artisan wooden birds.webp" alt="Handcrafted resin and wood bird sculpture resting on a natural branch" class="gallery-thumb" data-full="images\Artisan wooden birds.webp">
        <figcaption>Resin & Wood Bird Sculpture</figcaption>
        </figure>
 
        <figure class="gallery-item">
-        <img src="C:\Users\sajin\Downloads\lab5\lab5\handicraft_store\images\Lokta Paper Lampshades Lantern.webp" alt="Handmade Nepali Lokta paper lantern featuring Buddha Eyes design" class="gallery-thumb" data-full="C:\Users\sajin\Downloads\lab5\lab5\handicraft_store\images\Lokta Paper Lampshades Lantern.webp"> 
+        <img src="images\Lokta Paper Lampshades Lantern.webp" alt="Handmade Nepali Lokta paper lantern featuring Buddha Eyes design" class="gallery-thumb" data-full="images\Lokta Paper Lampshades Lantern.webp"> 
        <figcaption>Lokta Paper Lantern — Buddha Eyes</figcaption>
        </figure>
 
        <figure class="gallery-item"> 
-        <img src="C:\Users\sajin\Downloads\lab5\lab5\handicraft_store\images\Lokta Paper.jpg" alt="Handmade Nepali Lokta paper notebook with Mt. Fishtail cover design" class="gallery-thumb" data-full="C:\Users\sajin\Downloads\lab5\lab5\handicraft_store\images\Lokta Paper.jpg">
+        <img src="images\Lokta Paper.jpg" alt="Handmade Nepali Lokta paper notebook with Mt. Fishtail cover design" class="gallery-thumb" data-full="images\Lokta Paper.jpg">
        <figcaption>Lokta Paper Notebook — Mt. Fishtail</figcaption>
        </figure>
 
        <figure class="gallery-item">
-        <img src="C:\Users\sajin\Downloads\lab5\lab5\handicraft_store\images\Dhaka-Scarf.webp" alt="Traditional Nepali Dhaka shawl with vibrant woven patterns" class="gallery-thumb" data-full="C:\Users\sajin\Downloads\lab5\lab5\handicraft_store\images\Dhaka-Scarf.webp">
+        <img src="images\Dhaka-Scarf.webp" alt="Traditional Nepali Dhaka shawl with vibrant woven patterns" class="gallery-thumb" data-full="images\Dhaka-Scarf.webp">
        <figcaption>Traditional Dhaka Shawl</figcaption>
        </figure>
 
        <figure class="gallery-item">
-        <img src="C:\Users\sajin\Downloads\lab5\lab5\handicraft_store\images\Footed Planter.webp" alt="Handmade ceramic pot with citrus fruit embossing" class="gallery-thumb" data-full="C:\Users\sajin\Downloads\lab5\lab5\handicraft_store\images\Footed Planter.webp">
+        <img src="images\Footed Planter.webp" alt="Handmade ceramic pot with citrus fruit embossing" class="gallery-thumb" data-full="images\Footed Planter.webp">
        <figcaption>Citrus Blossom Ceramic Pot</figcaption>
        </figure>
 
 
        <figure class="gallery-item">
-        <img src="C:\Users\sajin\Downloads\lab5\lab5\handicraft_store\images\Bamboo basket.webp" alt="Handwoven round wicker basket" class="gallery-thumb" data-full="C:\Users\sajin\Downloads\lab5\lab5\handicraft_store\images\Bamboo basket.webp">
+        <img src="images\Bamboo basket.webp" alt="Handwoven round wicker basket" class="gallery-thumb" data-full="images\Bamboo basket.webp">
       <figcaption>Handwoven Round Basket</figcaption>
       </figure>
 
@@ -159,3 +159,4 @@
   <script src="js/main.js"></script>
 </body>
 </html>
+
