Fix HTML formatting and update image paths
The HTML structure is updated to correct the formatting and ensure proper rendering of the content. Image paths have been adjusted for better accessibility.

--- a/index.html
+++ b/index.html
@@ -70,21 +70,21 @@
       <h2 id="preview-heading">Featured Products</h2>
       <div class="products-grid">
         <article class="product-card" tabindex="0">
-          <img src="C:\Users\sajin\Downloads\lab5\lab5\handicraft_store\images\Table Runners.avif" alt="Woven textile table runner with geometric patterns">
+          <img src="images\Table Runners.avif" alt="Woven textile table runner with geometric patterns">
           <h3>Woven Table Runner</h3>
           <p class="product-price">$45.00</p>
           <p class="product-desc">Hand-woven cotton with traditional geometric patterns.</p>
           <a href="products.html#table-runner" class="btn-secondary">View Details</a>
         </article>
         <article class="product-card" tabindex="0">
-          <img src="C:\Users\sajin\Downloads\lab5\lab5\handicraft_store\images\Glazed Ceramic Vase.avif" alt="Glazed ceramic vase with blue tones">
+          <img src="images\Glazed Ceramic Vase.avif" alt="Glazed ceramic vase with blue tones">
           <h3>Glazed Ceramic Vase</h3>
           <p class="product-price">$60.00</p>
           <p class="product-desc">Artisan-glazed stoneware vase with unique finish.</p>
           <a href="products.html#ceramic-vase" class="btn-secondary">View Details</a>
         </article>
         <article class="product-card" tabindex="0">
-          <img src="C:\Users\sajin\Downloads\lab5\lab5\handicraft_store\images\Carved Spoon Set.jpg" alt="Set of carved wooden spoons with smooth finish">
+          <img src="images\Carved Spoon Set.jpg" alt="Set of carved wooden spoons with smooth finish">
           <h3>Carved Spoon Set</h3>
           <p class="product-price">$30.00</p>
           <p class="product-desc">Hand-carved wooden serving spoons with food-safe finish.</p>
@@ -146,3 +146,4 @@
   <script src="js/main.js"></script>
 </body>
 </html>
+
