Change image paths to relative URLs
Updated image paths to relative URLs for product images.

--- a/products.html
+++ b/products.html
@@ -38,7 +38,7 @@
 
       <div class="products-grid">
         <article class="product-card" id="table-runner">
-          <img src="C:\Users\sajin\Downloads\lab5\lab5\handicraft_store\images\Table Runners.avif" alt="Woven textile table runner with geometric patterns">
+          <img src="images\Table Runners.avif" alt="Woven textile table runner with geometric patterns">
           <h3>Woven Table Runner</h3>
           <p class="product-price">$45.00</p>
           <p class="product-category">Textiles</p>
@@ -53,7 +53,7 @@
         </article>
 
         <article class="product-card" id="ceramic-vase">
-          <img src="C:\Users\sajin\Downloads\lab5\lab5\handicraft_store\images\Glazed Ceramic Vase.avif" alt="Glazed ceramic vase with blue tones and organic shape">
+          <img src="images\Glazed Ceramic Vase.avif" alt="Glazed ceramic vase with blue tones and organic shape">
           <h3>Hand-Painted Ceramic Vase</h3>
           <p class="product-price">$60.00</p>
           <p class="product-category">Ceramics</p>
@@ -68,7 +68,7 @@
         </article>
 
         <article class="product-card" id="spoon-set">
-          <img src="C:\Users\sajin\Downloads\lab5\lab5\handicraft_store\images\Carved Spoon Set.jpg" alt="Set of carved wooden spoons with smooth finish">
+          <img src="images\Carved Spoon Set.jpg" alt="Set of carved wooden spoons with smooth finish">
           <h3>Carved Spoon Set</h3>
           <p class="product-price">$30.00</p>
           <p class="product-category">Kitchen</p>
@@ -83,7 +83,7 @@
         </article>
 
         <article class="product-card" id="jute-bag">
-          <img src="C:\Users\sajin\Downloads\lab5\lab5\handicraft_store\images\Jute bag handmade.webp" alt="Handwoven jute tote bag with fabric bow">
+          <img src="images\Jute bag handmade.webp" alt="Handwoven jute tote bag with fabric bow">
           <h3>Handwoven Jute Tote Bag</h3>
           <p class="product-price">$45.00</p>
           <p class="product-category">Accessories</p>
@@ -98,7 +98,7 @@
         </article>
 
         <article class="product-card" id="crochet-doll">
-          <img src="C:\Users\sajin\Downloads\lab5\lab5\handicraft_store\images\Crochet Handmade Doll.png" alt="Handmade crochet doll wearing a pink dress and bow headband">
+          <img src="images\Crochet Handmade Doll.png" alt="Handmade crochet doll wearing a pink dress and bow headband">
           <h3>Handmade Crochet Doll</h3>
           <p class="product-price">$55.00</p>
           <p class="product-category">Toys</p>
@@ -113,7 +113,7 @@
         </article>
 
         <article class="product-card" id="jewelry-set">
-          <img src="C:\Users\sajin\Downloads\lab5\lab5\handicraft_store\images\Traditional handmade necklace set.webp" alt="Handcrafted antique gold and pearl jewelry set">
+          <img src="images\Traditional handmade necklace set.webp" alt="Handcrafted antique gold and pearl jewelry set">
           <h3>Antique Gold & Pearl Jewelry Set</h3>
           <p class="product-price">$65.00</p>
           <p class="product-category">Jewelry</p>
@@ -128,7 +128,7 @@
         </article>
 
         <article class="product-card" id="citrus-planter">
-          <img src="C:\Users\sajin\Downloads\lab5\lab5\handicraft_store\images\Footed Planter.webp" alt="Handmade citrus-themed ceramic planter with embossed fruit design">
+          <img src="images\Footed Planter.webp" alt="Handmade citrus-themed ceramic planter with embossed fruit design">
           <h3>Citrus Blossom Ceramic Planter</h3>
           <p class="product-price">$40.00</p>
           <p class="product-category">Ceramics</p>
@@ -143,7 +143,7 @@
        </article>
 
        <article class="product-card" id="abstract-wall-clock">
-        <img src="C:\Users\sajin\Downloads\lab5\lab5\handicraft_store\images\wall clock.avif" alt="Round wall clock with vibrant abstract color swirl design">
+        <img src="images\wall clock.avif" alt="Round wall clock with vibrant abstract color swirl design">
         <h3>Abstract Color Swirl Wall Clock</h3>
         <p class="product-price">$55.00</p>
         <p class="product-category">Home Decor</p>
@@ -202,3 +202,4 @@
   <script src="js/main.js"></script>
 </body>
 </html>
+
