Clarify cart item storage and transaction details
Updated the cart page content to clarify that items are stored temporarily and no real transactions occur.

--- a/cart.html
+++ b/cart.html
@@ -34,7 +34,7 @@
   <main class="container">
     <section aria-labelledby="cart-heading">
       <h1 id="cart-heading">Your Cart</h1>
-      <p class="intro-text">Items you have added to your cart are listed below. This is a demo cart stored in your browser.</p>
+      <p class="intro-text">The items in your cart are stored temporarily in your browser for this demo. No real transactions or data storage occur.</p>
 
       <div id="cart-items" class="cart-items">
         <!-- Cart items rendered by JS -->
@@ -134,3 +134,4 @@
   <script src="js/main.js"></script>
 </body>
 </html>
+
